--- a/application/views/layouts/default.twig
+++ b/application/views/layouts/default.twig
@@ -27,7 +27,25 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Bootstrap Admin Theme</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="{{ base_url }}public/icon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="{{ base_url }}public/icon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ base_url }}public/icon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="{{ base_url }}public/icon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ base_url }}public/icon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="{{ base_url }}public/icon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="{{ base_url }}public/icon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="{{ base_url }}public/icon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ base_url }}public/icon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="{{ base_url }}public/icon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ base_url }}public/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="{{ base_url }}public/icon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ base_url }}public/icon/favicon-16x16.png">
+    <link rel="manifest" href="{{ base_url }}public/icon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="{{ base_url }}public/icon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
+    <title>Echo Creative Company</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{{ base_url }}public/css/bootstrap.min.css" rel="stylesheet">
