--- a/application/views/users/add.twig
+++ b/application/views/users/add.twig
@@ -1,12 +1,7 @@
 {% extends "layouts/default.twig" %}
 
-{% block title %}Index{% endblock %}
-{% block head %}
-    {{ parent() }}
-    <style type="text/css">
-        .important { color: #336699; }
-    </style>
-{% endblock %}
+{% block title %}Aggiungi Utente{% endblock %}
+
 {% block content %}
     <h1>Aggiungi un Utente</h1>
     <p class="important">
