--- a/application/views/users/add.twig
+++ b/application/views/users/add.twig
@@ -5,26 +5,30 @@
 {% block content_title %}Aggiungi un Utente{% endblock %}
 
 {% block content %}
-    <div class="col-md-12">
+    <div class="col-md-6">
         {{ form_open() }}
             <div class="form-group col-md-3">
-                <label for="email">Email <span class="red">*</span>:</label>
+                <label for="email">Email <span class="text-danger">*</span>:</label>
             </div>
             <div class="form-group col-md-9">
                 <input type="email" name="email" class="form-control" id="email" required>
             </div>
             <div class="form-group col-md-3">
-                <label for="username">Username <span class="red">*</span>:</label>
+                <label for="username">Username <span class="text-danger">*</span>:</label>
             </div>
             <div class="form-group col-md-9">
                 <input type="text" name="username" class="form-control" id="username" required>
             </div>
             <div class="form-group col-md-3">
-                <label for="password">Password <span class="red">*</span>:</label>
+                <label for="password">Password <span class="text-danger">*</span>:</label>
             </div> 
             <div class="form-group col-md-9">
                 <input type="password" class="form-control" id="password" name="password" required>
             </div>
+            <div class="form-group col-md-12">
+                <input class="btn btn-default btn-info pull-right" type="submit" value="Crea L'utente" id="submit">
+            </div>
         {{ form_close() }}
     </div>
+    <div class="col-md-6"></div>
 {% endblock %}
