--- a/application/views/users/add.twig
+++ b/application/views/users/add.twig
@@ -7,23 +7,45 @@
 {% block content %}
     <div class="col-md-6">
         {{ form_open() }}
+            <div class="col-lg-12">
+                <h2 class="page-header">Dati Utente</h2>
+            </div>
             <div class="form-group col-md-3">
                 <label for="email">Email <span class="text-danger">*</span>:</label>
             </div>
             <div class="form-group col-md-9">
-                <input type="email" name="email" class="form-control" id="email" required>
+                <input type="email" name="email" class="form-control" id="email" value="{{ formValues.email }}" placeholder="email@example.com" required>
             </div>
             <div class="form-group col-md-3">
                 <label for="username">Username <span class="text-danger">*</span>:</label>
             </div>
             <div class="form-group col-md-9">
-                <input type="text" name="username" class="form-control" id="username" required>
+                <input type="text" name="username" class="form-control" id="username" value="{{ formValues.username }}" placeholder="Username" required>
             </div>
             <div class="form-group col-md-3">
                 <label for="password">Password <span class="text-danger">*</span>:</label>
             </div> 
             <div class="form-group col-md-9">
                 <input type="password" class="form-control" id="password" name="password" required>
+            </div>
+            <div class="form-group col-md-3">
+                <label for="password_confirm">Conferma Password <span class="text-danger">*</span>:</label>
+            </div> 
+            <div class="form-group col-md-9">
+                <input type="password" class="form-control" id="password_confirm" name="password_confirm" required>
+            </div>
+            <div class="col-lg-12">
+                <h2 class="page-header">Gruppi Utente</h2>
+            </div>
+            <div class="form-group col-md-3">
+                <label for="groups">Gruppi Utenti:</label>
+            </div> 
+            <div class="form-group col-md-9">
+                <select multiple="multiple" name="groups[]" id="groups" class="form-control">
+                    {% for group in groups %}
+                        <option value="{{ group.id }}"{% if group.id in formValues.groups %} selected="selected"{% endif %}>{{ group.name }}</option>
+                    {% endfor %}
+                </select>
             </div>
             <div class="form-group col-md-12">
                 <input class="btn btn-default btn-info pull-right" type="submit" value="Crea L'utente" id="submit">
