--- a/application/views/login.twig
+++ b/application/views/login.twig
@@ -55,24 +55,32 @@
 
     <div class="container">
         <div class="row">
+            {% if systemWarning != null %}
+                <div class="row">
+                    <div class="alert alert-warning col-md-12 alert-dismissible" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <strong>Warning!</strong> {{ systemWarning|raw }}
+                    </div>
+                </div>
+            {% endif %}
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading">
                         <h3 class="panel-title">Login</h3>
                     </div>
                     <div class="panel-body">
-                        <form role="form">
+                        {{ form_open() }}
                             <fieldset>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="email" type="email" value="{{ formValue.email }}" autofocus>
+                                    <input class="form-control" placeholder="E-mail" name="email" type="email" value="{{ formValue.email }}" autofocus email required>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                                    <input class="form-control" placeholder="Password" name="password" type="password" value="" required>
                                 </div>
                                 <!-- Change this to a button or input when using this as a form -->
-                                <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
+                                <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
                             </fieldset>
-                        </form>
+                        {{ form_close() }}
                     </div>
                 </div>
             </div>
@@ -80,16 +88,16 @@
     </div>
 
     <!-- jQuery -->
-    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="{{ base_url }}public/js/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="{{ base_url }}public/js/bootstrap/bootstrap.min.js"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
-    <script src="../vendor/metisMenu/metisMenu.min.js"></script>
+    <script src="{{ base_url }}public/js/metisMenu/metisMenu.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="../dist/js/sb-admin-2.js"></script>
+    <script src="{{ base_url }}public/js/custom.js"></script>
 
 </body>
 
