--- a/application/views/users/index.twig
+++ b/application/views/users/index.twig
@@ -1,9 +1,69 @@
 {% extends "layouts/default.twig" %}
 
+{% block head %}
+    {{ parent() }}
+
+    <link rel="stylesheet" type="text/css" href="{{ base_url() }}public/css/datatables/datatables.min.css">
+    <link rel="stylesheet" type="text/css" href="{{ base_url() }}public/css/datatables/datatables.responsive.min.css">
+    <link rel="stylesheet" type="text/css" href="{{ base_url() }}public/css/datatables/datatables.bs.min.css">
+    
+    <script type="text/javascript" charset="utf8" src="{{ base_url() }}public/js/datatables/datatables.min.js"></script>
+
+    <script>
+        $(document).ready(function(){
+            $('#usersTable').DataTable();
+        });
+    </script>
+{% endblock %}
+
 {% block title %}Gestione Utenti{% endblock %}
 
 {% block content_title %}Lista Utenti{% endblock %}
 
 {% block content %}
-    
+    {% if usersCount > 0 %}
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Lista degli utenti
+                </div>
+                <div class="panel-body">
+                    <table class="table table-striped table-bordered table-hover" id="usersTable">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Email</th>
+                                <th>Username</th>
+                                <th>Created</th>
+                                <th>Last Edit</th>
+                                <th>Active</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for user in users %}
+                                <tr>
+                                    <td>{{ user.id }}</td>
+                                    <td>{{ user.email }}</td>
+                                    <td>{{ user.username }}</td>
+                                    <td>{{ user.created }}</td>
+                                    <td>{{ user.last_update }}</td>
+                                    <td>
+                                        {% if user.active == 1 %}
+                                            Sì
+                                        {% else %}
+                                            No
+                                        {% endif %}
+                                    </td>
+                                    <td>{{ user.id }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    {% else %}
+        <div class="text-center"><b>Nessun Utente Trovato</b></div>
+    {% endif %}
 {% endblock %}
