--- a/application/views/users/index.twig
+++ b/application/views/users/index.twig
@@ -57,7 +57,7 @@
                                             No
                                         {% endif %}
                                     </td>
-                                    <td class="text-right">{{ user.id }}</td>
+                                    <td class="text-right"><a href="{{ site_url('users/edit') }}/{{ user.id }}">Edit</a></td>
                                 </tr>
                             {% endfor %}
                         </tbody>
