--- a/application/views/login.twig
+++ b/application/views/login.twig
@@ -77,6 +77,9 @@
                                 <div class="form-group">
                                     <input class="form-control" placeholder="Password" name="password" type="password" value="" required>
                                 </div>
+                                <div class="form-group">
+                                    <label for="remember"><input type="checkbox" name="remember" id="remember" value="1"> Mantieni il Login</label>
+                                </div>
                                 <!-- Change this to a button or input when using this as a form -->
                                 <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
                             </fieldset>
