--- a/application/views/users/index.twig
+++ b/application/views/users/index.twig
@@ -12,6 +12,7 @@
     <script>
         $(document).ready(function(){
             $('#usersTable').DataTable();
+            $('[data-toggle="tooltip"]').tooltip(); 
         });
     </script>
 {% endblock %}
@@ -23,6 +24,10 @@
 {% block content %}
     {% if usersCount > 0 %}
         <div class="col-lg-12">
+            <div class="text-right">
+                <a href="{{ site_url("users/add") }}" class="btn btn-primary btn-lg"><i class="fa fa-lg fa-plus-square"></i> Aggiungi un Utente</a>
+            </div>
+            <hr class="clearfix">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     Lista degli utenti
@@ -57,7 +62,11 @@
                                             No
                                         {% endif %}
                                     </td>
-                                    <td class="text-right"><a href="{{ site_url('users/edit') }}/{{ user.id }}">Edit</a></td>
+                                    <td class="text-right">
+                                        <a href="{{ site_url("users/edit/") }}{{ user.id }}">
+                                            <i class="fa fa-pencil-square-o fa-lg" data-toggle="tooltip" title="Edit {{ user.username }}"></i>
+                                        </a>
+                                    </td>
                                 </tr>
                             {% endfor %}
                         </tbody>
