--- a/application/views/services/index.twig
+++ b/application/views/services/index.twig
@@ -40,6 +40,7 @@
                             <th>Public Key</th>
                             <th>Secret Key</th>
                             <th>Algoritmo</th>
+                            <th>URL</th>
                             <th>Created</th>
                             <th>Last Edit</th>
                             <th>Active</th>
@@ -49,10 +50,11 @@
                         {% for service in services %}
                             <tr>
                                 <td>{{ service.id }}</td>
-                                <td>{{ service.name }}</td>
-                                <td>{{ service.pkey }}</td>
-                                <td>{{ service.skey }}</td>
+                                <td>{{ service.name }} <i data-toggle="tooltip" class="fa fa-question-circle" title="{{ service.descrizione }}"></i></td>
+                                <td><p class="text-ellipsis" data-toggle="tooltip" title="{{ service.pkey }}">{{ service.pkey }}</p></td>
+                                <td><p class="text-ellipsis" data-toggle="tooltip" title="{{ service.skey }}">{{ service.skey }}</p></td>
                                 <td>{{ service.alg }}</td>
+                                <td>{{ service.url }}</td>
                                 <td>{{ service.created }}</td>
                                 <td>{{ service.last_update }}</td>
                                 <td class="text-center">
