--- a/application/views/services/add.twig
+++ b/application/views/services/add.twig
@@ -14,7 +14,7 @@
                 <label for="name">Nome Service <span class="text-danger">*</span>:</label>
             </div>
             <div class="form-group col-md-9">
-                <input type="name" name="name" class="form-control" id="name" value="{{ formValues.name }}" placeholder="Nome Service" required>
+                <input type="text" name="name" class="form-control" id="name" value="{{ formValues.name }}" placeholder="Nome Service" required>
             </div>
             <div class="form-group col-md-3">
                 <label for="algoritmo">Algoritmo Service <span class="text-danger">*</span>:</label>
@@ -31,6 +31,14 @@
             </div>
             <div class="form-group col-md-9">
                 <input type="url" name="url" class="form-control" id="url" value="{{ formValues.url }}" placeholder="URL Service" required>
+            </div>
+            <div class="form-group col-md-3">
+                <label for="descrizione">Descrizione:</label>
+            </div>
+            <div class="form-group col-md-9">
+                <textarea id="descrizione" name="descrizione" class="form-control" rows="5">
+                    {{ formValues.descrizione }}
+                </textarea>
             </div>
             <div class="form-group col-md-12">
                 <input class="btn btn-default btn-info pull-right" type="submit" value="Crea il Service >>" id="submit">
