--- a/application/views/services/add.twig
+++ b/application/views/services/add.twig
@@ -36,9 +36,7 @@
                 <label for="descrizione">Descrizione:</label>
             </div>
             <div class="form-group col-md-9">
-                <textarea id="descrizione" name="descrizione" class="form-control" rows="5">
-                    {{ formValues.descrizione }}
-                </textarea>
+                <textarea id="descrizione" name="descrizione" class="form-control" rows="5">{{ formValues.descrizione }}</textarea>
             </div>
             <div class="form-group col-md-12">
                 <input class="btn btn-default btn-info pull-right" type="submit" value="Crea il Service >>" id="submit">
